@@ -1,5 +1,13 @@
 package popjava.buffer;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.ObjectInput;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutput;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
 import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.util.Map;
@@ -35,7 +43,7 @@ import popjava.util.LogWriter;
  * <br>
  * Note that null arrays can be stored in the buffer, but will be transformed to arrays of length 0 during deserializiation.
  */
-public abstract class POPBuffer extends Object {
+public abstract class POPBuffer {
 	/**
 	 * Each buffer send must contains a message header
 	 */
@@ -342,7 +350,7 @@ public abstract class POPBuffer extends Object {
 		return size;
 	}
 
-	private static Map<Integer, Constructor<?>> constructorsCache = new ConcurrentHashMap<Integer, Constructor<?>>();
+	private static Map<Integer, Constructor<?>> constructorsCache = new ConcurrentHashMap<>();
 	
 	private Constructor<?> getConstructorForClass(Class<?> c) throws SecurityException, NoSuchMethodException{
 		int hash = c.getName().hashCode();
@@ -363,6 +371,7 @@ public abstract class POPBuffer extends Object {
 	 * @return	Object retrieved in the buffer
 	 * @throws POPException	thrown if the deserialization process is not going well
 	 */
+	@SuppressWarnings("unchecked")
 	public Object getValue(Class<?> c) throws POPException {
 		//LogWriter.Prefix="Broker";
 		
@@ -373,7 +382,7 @@ public abstract class POPBuffer extends Object {
 		}else if (c.equals(float.class) || c.equals(Float.class)){
 			return new Float(getFloat());
 		}else if (c.equals(boolean.class) || c.equals(Boolean.class)){
-			return new Boolean(getBoolean());
+			return Boolean.valueOf(getBoolean());
 		}else if (c.equals(String.class)){
 			return getString();
 		}else if (c.equals(char.class) || c.equals(Character.class)){
@@ -408,7 +417,6 @@ public abstract class POPBuffer extends Object {
 			} catch(NoSuchMethodException e){
 				POPException.throwReflectSerializeException(c.getName(), "Default constructor is missing");
 			} catch (Exception e) {
-			    e.printStackTrace();
 				LogWriter.writeExceptionLog(e);
 				POPException.throwReflectSerializeException(c.getName(), e.getMessage());
 			}
@@ -416,6 +424,17 @@ public abstract class POPBuffer extends Object {
 			String name = this.getString();
 			Class<? extends Enum> t = (Class<? extends Enum>)c;
 			return Enum.valueOf(t, name);
+		}
+		else if(Serializable.class.isAssignableFrom(c)) {
+			int length = getInt();
+			try (ByteArrayInputStream bis = new ByteArrayInputStream(getByteArray(length))) {
+				try (ObjectInput in = new ObjectInputStream(bis)) {
+				  return in.readObject(); 
+				}
+			} catch(IOException | ClassNotFoundException e) {
+				LogWriter.writeExceptionLog(e);
+				POPException.throwReflectSerializeException(c.getName(), e.getMessage());
+			}
 		}
 		
 		return null;
@@ -431,30 +450,41 @@ public abstract class POPBuffer extends Object {
 		if (o == null) {
 			if (c.isArray()) {
 				putArray(o);
-			}else{
-				POPException.throwNullObjectNotAllowException();
+			} else {
+				throw POPException.throwNullObjectNotAllowException();
 			}
-		}else if (c.equals(byte.class) || c.equals(Byte.class)){
+		}
+		else if (c.equals(byte.class) || c.equals(Byte.class)) {
 			put((Byte) o);
-		}else if (c.equals(int.class) || c.equals(Integer.class)){
+		}
+		else if (c.equals(int.class) || c.equals(Integer.class)) {
 			putInt((Integer) o);
-		}else if (c.equals(float.class) || c.equals(Float.class)){
+		}
+		else if (c.equals(float.class) || c.equals(Float.class)) {
 			putFloat((Float) o);
-		}else if (c.equals(boolean.class) || c.equals(Boolean.class)){
+		}
+		else if (c.equals(boolean.class) || c.equals(Boolean.class)) {
 			putBoolean((Boolean) o);
-		}else if (c.equals(String.class)){
+		}
+		else if (c.equals(String.class)) {
 			putString((String) o);
-		}else if (c.equals(char.class) || c.equals(Character.class)){
+		}
+		else if (c.equals(char.class) || c.equals(Character.class)) {
 			putChar((Character) o);
-		}else if (c.equals(long.class) || c.equals(Long.class)){
+		}
+		else if (c.equals(long.class) || c.equals(Long.class)) {
 			putLong((Long) o);
-		}else if (c.equals(double.class) || c.equals(Double.class)){
+		}
+		else if (c.equals(double.class) || c.equals(Double.class)) {
 			putDouble((Double) o);
-		}else if (c.equals(short.class) || c.equals(Short.class)){
-			putShort((Short)o);
-		}else if (c.isArray()) {
+		}
+		else if (c.equals(short.class) || c.equals(Short.class)) {
+			putShort((Short) o);
+		}
+		else if (c.isArray()) {
 			putArray(o);
-		} else if (IPOPBaseInput.class.isAssignableFrom(c)) {
+		}
+		else if (IPOPBaseInput.class.isAssignableFrom(c)) {
 			try {
 				IPOPBaseInput temp = (IPOPBaseInput) o;
 				temp.serialize(this);
@@ -462,7 +492,8 @@ public abstract class POPBuffer extends Object {
 				LogWriter.writeExceptionLog(e);
 				POPException.throwReflectSerializeException(c.getName(), e.getMessage());
 			}
-		} else if (IPOPBase.class.isAssignableFrom(c)) {
+		}
+		else if (IPOPBase.class.isAssignableFrom(c)) {
 			try {
 				IPOPBase temp = (IPOPBase) o;
 				temp.serialize(this);
@@ -470,9 +501,23 @@ public abstract class POPBuffer extends Object {
 				LogWriter.writeExceptionLog(e);
 				POPException.throwReflectSerializeException(c.getName(), e.getMessage());
 			}
-		} else if( c.isEnum()){
+		}
+		else if( c.isEnum()){
 			putString(((Enum) o).name());
-		}else{
+		}
+		else if(Serializable.class.isAssignableFrom(c)){
+			try (ByteArrayOutputStream bos = new ByteArrayOutputStream()) {
+				try (ObjectOutput out = new ObjectOutputStream(bos)) {
+					out.writeObject(o);
+					out.flush();
+					putByteArray(bos.toByteArray());
+				}
+			} catch(IOException e) {
+				LogWriter.writeExceptionLog(e);
+				POPException.throwReflectSerializeException(c.getName(), e.getMessage());
+			}
+		}
+		else{
 		    POPException.throwReflectSerializeException(c.getName(), "Can not serialize parameter "+c.getName());
 		}
 	}
@@ -487,31 +532,39 @@ public abstract class POPBuffer extends Object {
 		if (o == null) {
 			this.putInt(-1);
 			return;
-		} else {			
-			Class<?> c = o.getClass();
-			if (c.equals(byte[].class))
-				putByteArray((byte[]) o);
-			else if (c.equals(int[].class))
-				putIntArray((int[]) o);
-			else if (c.equals(float[].class))
-				putFloatArray((float[]) o);
-			else if (c.equals(boolean[].class))
-				putBooleanArray((boolean[]) o);
-			else if (c.equals(long[].class))
-				putLongArray((long[]) o);
-			else if (c.equals(double[].class))
-				putDoubleArray((double[]) o);
-			else if (c.equals(short[].class))
-				putShortArray((short[]) o);
-			else if (c.equals(char[].class))
-				putCharArray((char[]) o);
-			else {
-				length = Array.getLength(o);
-				putInt(length);
-				for (int i = 0; i < length; i++) {
-					Object element = Array.get(o, i);
-					putValue(element, c.getComponentType());
-				}
+		}
+
+		Class<?> c = o.getClass();
+		if (c.equals(byte[].class)) {
+			putByteArray((byte[]) o);
+		}
+		else if (c.equals(int[].class)) {
+			putIntArray((int[]) o);
+		}
+		else if (c.equals(float[].class)) {
+			putFloatArray((float[]) o);
+		}
+		else if (c.equals(boolean[].class)) {
+			putBooleanArray((boolean[]) o);
+		}
+		else if (c.equals(long[].class)) {
+			putLongArray((long[]) o);
+		}
+		else if (c.equals(double[].class)) {
+			putDoubleArray((double[]) o);
+		}
+		else if (c.equals(short[].class)) {
+			putShortArray((short[]) o);
+		}
+		else if (c.equals(char[].class)) {
+			putCharArray((char[]) o);
+		}
+		else {
+			length = Array.getLength(o);
+			putInt(length);
+			for (int i = 0; i < length; i++) {
+				Object element = Array.get(o, i);
+				putValue(element, c.getComponentType());
 			}
 		}
 
@@ -519,32 +572,42 @@ public abstract class POPBuffer extends Object {
 
 	/**
 	 * Retrieve an array from the buffer
+	 * @param <T>
 	 * @param arrayType	Class of the array to retrieve
 	 * @return	Array retrieved in the buffer
 	 * @throws POPException	thrown if the serialization process is not going well
 	 */
-	public Object getArray(Class<?> arrayType) throws POPException {
+	@SuppressWarnings("unchecked")
+	public<T> T getArray(Class<T> arrayType) throws POPException {
 		int length = this.getInt();
 		
 		if (length < 0){
 			return null;
 		} else {
-			if (arrayType.equals(byte[].class))
-				return getByteArray(length);
-			else if (arrayType.equals(int[].class))
-				return getIntArray(length);
-			else if (arrayType.equals(float[].class))
-				return getFloatArray(length);
-			else if (arrayType.equals(boolean[].class))
-				return getBooleanArray(length);
-			else if (arrayType.equals(long[].class))
-				return getLongArray(length);
-			else if (arrayType.equals(double[].class))
-				return getDoubleArray(length);
-			else if (arrayType.equals(short[].class))
-				return getShortArray(length);
-			else if (arrayType.equals(char[].class))
-				return getCharArray(length);
+			if (arrayType.equals(byte[].class)) {
+				return (T) getByteArray(length);
+			}
+			else if (arrayType.equals(int[].class)) {
+				return (T) getIntArray(length);
+			}
+			else if (arrayType.equals(float[].class)) {
+				return (T) getFloatArray(length);
+			}
+			else if (arrayType.equals(boolean[].class)) {
+				return (T) getBooleanArray(length);
+			}
+			else if (arrayType.equals(long[].class)) {
+				return (T) getLongArray(length);
+			}
+			else if (arrayType.equals(double[].class)) {
+				return (T) getDoubleArray(length);
+			}
+			else if (arrayType.equals(short[].class)) {
+				return (T) getShortArray(length);
+			}
+			else if (arrayType.equals(char[].class)) {
+				return (T) getCharArray(length);
+			}
 			else {
 				Class<?> elementType = arrayType.getComponentType();
 				Object resultArray = Array.newInstance(elementType, length);
@@ -552,11 +615,11 @@ public abstract class POPBuffer extends Object {
 				    try{
 				        Object value = getValue(elementType);
 				        Array.set(resultArray, index, value);
-				    }catch(POPException e){
+				    } catch(POPException e) {
 				        throw e;
 				    }
 				}
-				return resultArray;
+				return (T)resultArray;
 			}
 
 		}
@@ -576,9 +639,7 @@ public abstract class POPBuffer extends Object {
 			} else if (IPOPBase.class.isAssignableFrom(type)) {
 				putValue(obj,type);
 			}
-		} catch (SecurityException e) {
-			e.printStackTrace();
-		} catch (IllegalArgumentException e) {
+		} catch (SecurityException | IllegalArgumentException e) {
 			e.printStackTrace();
 		}
 	}
